// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CouponCard renders correctly 1`] = `
<div
  className="bg-white rounded-xl p-4 shadow-sm border transition-all flex flex-col border-l-4 border-l-orange-400 border-y-orange-100 border-r-orange-100 hover:shadow-md"
>
  <div
    className="flex justify-between items-start mb-2"
  >
    <div
      className="flex-1 pr-2"
    >
      <div
        className="flex items-center gap-2 mb-1 text-gray-400"
      >
        TagIcon
        <span
          className="text-xs font-medium uppercase tracking-wider"
        >
          coupon
        </span>
      </div>
      <h3
        className="font-bold text-lg leading-tight false"
      >
        Test Coupon
      </h3>
      <div
        className="text-sm text-gray-500 mt-1 flex flex-wrap gap-2"
      />
    </div>
    <div
      className="text-right shrink-0"
    >
      <div
        className="font-bold text-xl text-blue-600"
      >
        10%
      </div>
      <div
        className="mt-1 flex justify-end"
      >
        <span
          className="bg-orange-100 text-orange-700 px-2 py-0.5 rounded text-xs font-medium flex items-center gap-1"
        >
          ClockIcon
           
          10
          d left
        </span>
      </div>
    </div>
  </div>
  <div
    className="flex items-center justify-between mt-4 pt-3 border-t border-gray-50"
  >
    <div
      className="text-xs text-gray-400"
    >
      Exp: 2023-12-31
    </div>
    <div
      className="flex gap-2"
    >
      <button
        className="p-2 hover:bg-green-50 text-green-600 rounded-lg transition-colors"
        onClick={[Function]}
        title="Mark as Used"
      >
        CheckIcon
      </button>
      <button
        className="p-2 hover:bg-gray-100 text-gray-500 rounded-lg transition-colors"
        onClick={[Function]}
      >
        EditIcon
      </button>
      <button
        className="p-2 hover:bg-red-50 text-red-500 rounded-lg transition-colors"
        onClick={[Function]}
      >
        TrashIcon
      </button>
    </div>
  </div>
</div>
`;

exports[`CouponCard renders correctly when expired 1`] = `
<div
  className="bg-white rounded-xl p-4 shadow-sm border transition-all flex flex-col border-l-4 border-l-red-800 border-y-gray-100 border-r-gray-100 opacity-75"
>
  <div
    className="flex justify-between items-start mb-2"
  >
    <div
      className="flex-1 pr-2"
    >
      <div
        className="flex items-center gap-2 mb-1 text-gray-400"
      >
        TagIcon
        <span
          className="text-xs font-medium uppercase tracking-wider"
        >
          coupon
        </span>
      </div>
      <h3
        className="font-bold text-lg leading-tight false"
      >
        Test Coupon
      </h3>
      <div
        className="text-sm text-gray-500 mt-1 flex flex-wrap gap-2"
      />
    </div>
    <div
      className="text-right shrink-0"
    >
      <div
        className="font-bold text-xl text-blue-600"
      >
        10%
      </div>
      <div
        className="mt-1 flex justify-end"
      >
        <span
          className="bg-red-100 text-red-700 px-2 py-0.5 rounded text-xs font-medium flex items-center gap-1"
        >
          AlertIcon
           Expired
        </span>
      </div>
    </div>
  </div>
  <div
    className="flex items-center justify-between mt-4 pt-3 border-t border-gray-50"
  >
    <div
      className="text-xs text-gray-400"
    >
      Exp: 2023-12-31
    </div>
    <div
      className="flex gap-2"
    >
      <button
        className="p-2 hover:bg-gray-100 text-gray-500 rounded-lg transition-colors"
        onClick={[Function]}
      >
        EditIcon
      </button>
      <button
        className="p-2 hover:bg-red-50 text-red-500 rounded-lg transition-colors"
        onClick={[Function]}
      >
        TrashIcon
      </button>
    </div>
  </div>
</div>
`;

exports[`CouponCard renders correctly when used 1`] = `
<div
  className="bg-white rounded-xl p-4 shadow-sm border transition-all flex flex-col border-l-4 border-l-gray-400 border-y-gray-100 border-r-gray-100 opacity-75"
>
  <div
    className="flex justify-between items-start mb-2"
  >
    <div
      className="flex-1 pr-2"
    >
      <div
        className="flex items-center gap-2 mb-1 text-gray-400"
      >
        TagIcon
        <span
          className="text-xs font-medium uppercase tracking-wider"
        >
          coupon
        </span>
      </div>
      <h3
        className="font-bold text-lg leading-tight line-through text-gray-500"
      >
        Test Coupon
      </h3>
      <div
        className="text-sm text-gray-500 mt-1 flex flex-wrap gap-2"
      />
    </div>
    <div
      className="text-right shrink-0"
    >
      <div
        className="font-bold text-xl text-blue-600"
      >
        10%
      </div>
      <div
        className="mt-1 flex justify-end"
      >
        <span
          className="bg-gray-100 text-gray-600 px-2 py-0.5 rounded text-xs font-medium"
        >
          Used
        </span>
      </div>
    </div>
  </div>
  <div
    className="flex items-center justify-between mt-4 pt-3 border-t border-gray-50"
  >
    <div
      className="text-xs text-gray-400"
    >
      Exp: 2023-12-31
    </div>
    <div
      className="flex gap-2"
    >
      <button
        className="p-2 hover:bg-blue-50 text-blue-600 rounded-lg transition-colors"
        onClick={[Function]}
        title="Mark as Active"
      >
        CheckIcon
      </button>
      <button
        className="p-2 hover:bg-gray-100 text-gray-500 rounded-lg transition-colors"
        onClick={[Function]}
      >
        EditIcon
      </button>
      <button
        className="p-2 hover:bg-red-50 text-red-500 rounded-lg transition-colors"
        onClick={[Function]}
      >
        TrashIcon
      </button>
    </div>
  </div>
</div>
`;
